########################################################################################################################
# Dependencies

find_package( Boost )

if( NOT NO_CXX_WRAPPER )
  if( Boost_FOUND )
    add_subdirectory( c++ )
  else()
    message( WARNING "Boost not found - not building C++ wrapper" )
  endif()
else()
  message( WARNING "C++ wrapper not being built due to CMake option NO_CXX_WRAPPER" )
endif()

if( NOT NO_PYTHON_WRAPPER )
  add_subdirectory( python )
else()
  message( WARNING "Python wrapper not being built due to CMake option NO_PYTHON_WRAPPER" )
endif()

if( NOT NO_IDL_WRAPPER )
  find_package( IDL )
  if( IDL_FOUND )
    remove_definitions( -Wall -Werror )
    add_subdirectory( idl )
    add_definitions( -Wall -Werror )
  else()
    message( WARNING "IDL not found - not building IDL wrapper" )
  endif()
else()
  message( WARNING "IDL wrapper not being built due to CMake option NO_IDL_WRAPPER" )
endif()

if( NOT NO_JAVA_WRAPPER )
  find_package( Java 1.6 )
  find_package( JNI )
  if( JAVA_FOUND AND JNI_FOUND )
    add_subdirectory( java )
  else()
    message( WARNING "JAVA or JNI not found - not building Java wrapper" )
  endif()
else()
  message( WARNING "Java wrapper not being built due to CMake option NO_JAVA_WRAPPER" )
endif()

#add_subdirectory( matlab )
#add_subdirectory( PHP )
