#if( NOT NO_CXX_WRAPPER )
#  add_subdirectory( c++ )
#else()
#  message( WARNING "C++ wrapper not being built due to CMake option NO_CXX_WRAPPER" )
#endif()

#if( NOT NO_PYTHON_WRAPPER )
#  add_subdirectory( python )
#else()
#  message( WARNING "Python wrapper not being built due to CMake option NO_PYTHON_WRAPPER" )
#endif()

#if( NOT NO_IDL_WRAPPER )
#  add_subdirectory( idl )
#else()
#  message( WARNING "IDL wrapper not being built due to CMake option NO_IDL_WRAPPER" )
#endif()